--- a/main/templates/card.html
+++ b/main/templates/card.html
@@ -1,13 +1,18 @@
-<!-- card.html -->
-<div class="bg-gray-900 rounded-lg p-4 hover:bg-gray-700">
-    <a href="{% url 'main:edit_product' product_entry.id %}" class="hover-text" data-hover-text="{{ product_entry.effects }}">
-        <h2 class="text-xl font-bold text-white">{{ product_entry.name }}</h2>
-        <p class="text-gray-400">{{ product_entry.description }}</p>
-        <p class="text-gray-400">${{ product_entry.price }}</p>
-    </a>
+<div class="bg-gray-900 rounded-lg p-4 hover:bg-gray-700 product-card"
+    data-id="{{ product_entry.id }}">
+    <a href="#" class="ajax-get-link" data-id="{{ product_entry.id }}">
+        <div class="hover-text" data-hover-text="{{ product_entry.effects }}">
+            <h2 class="text-xl font-bold text-white">{{ product_entry.name }}</h2>
+            <p class="text-gray-400">{{ product_entry.description }}</p>
+            <p class="text-gray-400">${{ product_entry.price }}</p>
+        </a>
+    </div>
     <!-- Delete button -->
-    <form method="POST" action="{% url 'main:delete_product' product_entry.id %}" class="mt-2">
+    <form method="POST"
+        action="{% url 'main:delete_product' product_entry.id %}"
+        class="mt-2 delete-form">
         {% csrf_token %}
-        <button type="submit" class="text-red-500 hover:text-red-700">Delete</button>
+        <button type="submit"
+            class="text-red-500 hover:text-red-700">Delete</button>
     </form>
 </div>
