--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -1,3 +1,4 @@
+<!-- navbar.html -->
 <nav class="bg-gray-900 fixed top-0 left-0 w-full z-50">
     <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
         <div class="relative flex items-center justify-between h-16">
